kubernetes/celery-ml-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-celery-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd-celery-ml
  template:
    metadata:
      labels:
        app: sd-celery-ml
    spec:
      containers:
        - name: sd-celery-ml
          image: nicklesbread/seniordesign:@DOCKER_TAG
          imagePullPolicy: "IfNotPresent"
          command: ['celery', '-A', 'tasks.task_ml_initializer', 'worker', '-l', 'INFO', '--concurrency', '2', '-Q', 'ml_tasks', '--pool', 'threads', '--without-gossip', '--without-mingle']
      imagePullSecrets:
        - name: docker-hub-auth
