kubernetes/celery-propublica-govinfo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-celery-propublica-govinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd-celery-propublica-govinfo
  template:
    metadata:
      labels:
        app: sd-celery-propublica-govinfo
    spec:
      containers:
        - name: sd-celery-propublica-govinfo
          image: nicklesbread/seniordesign:@DOCKER_TAG
          imagePullPolicy: "IfNotPresent"
          command: ['celery', '-A', 'tasks.task_initializer', 'worker', '-l', 'INFO', '--concurrency', '4', '-Q', 'propublica', '--uid', '1', '--without-gossip', '--without-mingle']
      imagePullSecrets:
        - name: docker-hub-auth
