kubernetes/celery-twitter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-celery-twitter-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd-celery-twitter-user
  template:
    metadata:
      labels:
        app: sd-celery-twitter-user
    spec:
      containers:
        - name: sd-celery-twitter-user
          image: nicklesbread/seniordesign:36
          imagePullPolicy: "IfNotPresent"
          command: ['celery', '-A', 'tasks.task_initializer', 'worker', '-l', 'INFO', '--concurrency', '1', '-Q', 'twitter_users', '--uid', '1', '--without-gossip', '--without-mingle']
      imagePullSecrets:
        - name: docker-hub-auth
