kubernetes/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd-flask
  template:
    metadata:
      labels:
        app: sd-flask
    spec:
      containers:
        - name: sd-flask
          image: nicklesbread/seniordesign:@DOCKER_TAG
          imagePullPolicy: "IfNotPresent"
          command: ['gunicorn', 'server:create_app()', '-b', '0.0.0.0:5000', '--reload']
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: docker-hub-auth
