kubernetes/flower-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd-flower
  template:
    metadata:
      labels:
        app: sd-flower
    spec:
      containers:
        - name: sd-flower
          image: mher/flower:0.9.5
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5555
