kubernetes/maria-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-maria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd-maria
  template:
    metadata:
      labels:
        app: sd-maria
    spec:
      containers:
        - name: sd-maria
          image: mariadb:10.7
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb
              subPath: maria
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: sd-maria-pv-claim
