kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: sd-maria
  labels:
    app: sd-maria
spec:
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: sd-maria
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit
  labels:
    app: rabbit
spec:
  type: ClusterIP
  ports:
    - port: 5672
      protocol: TCP
      targetPort: 5672
  selector:
    app: sd-rabbit
---
apiVersion: v1
kind: Service
metadata:
  name: sd-flower
  labels:
    app: sd-flower
spec:
  type: ClusterIP
  ports:
    - port: 5555
      protocol: TCP
      targetPort: 5555
  selector:
    app: sd-flower
